--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
